--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt-api-module",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Convention based api module for Nuxt.js",
   "main": "lib/module.js",
   "scripts": {
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sunchaserkuafu/nuxt-api-module.git"
+    "url": "git+https://github.com/cloudrifting/nuxt-api-module.git"
   },
-  "author": "sunchaserkuafu",
+  "author": "susining",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/sunchaserkuafu/nuxt-api-module/issues"
+    "url": "https://github.com/cloudrifting/nuxt-api-module/issues"
   },
-  "homepage": "https://github.com/sunchaserkuafu/nuxt-api-module#readme",
+  "homepage": "https://github.com/cloudrifting/nuxt-api-module#readme",
   "lint-staged": {
     "*.{js,vue}": "eslint",
     "*.scss": "stylelint"
