--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.1.0",
   "description": "Convention based api module for Nuxt.js",
   "main": "lib/module.js",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "scripts": {
     "release": "npm publish",
     "lint": "node ./node_modules/eslint/bin/eslint.js --ext .js --ignore-path .gitignore . --fix"
